2009-08-23  Ozkan Sezer  <sezeroz@gmail.com>

	* Makefile.am: Added math/_chgsignl.S.
	* Makefile.in: Regenerated.

2009-08-23  Kai Tietz  <kai.tietz@onevision.com>

	* math/_chgsignl.S: Implemented _chgsignl().

	* ...: Add missing prototypes.

2009-08-22  Ozkan Sezer  <sezeroz@gmail.com>

	* fstat, stat, wstat: Instead of calling a function, "inline" (copy
	the body of) the called function and avoid the cast which overcomes
	the strict aliasing violation.  For the _USE_32BIT_TIME_T case, use
	memcpy.  Remove the _no_optimize attributes which are not necessary
	anymore.  The inlined versions from sys/stat.h should work fine now.

	* _findfirst64i32, _findnext64i32, _fstat64i32, _stat64i32,
	_wfindfirst64i32, _wfindnext64i32, _wstat64i32: Do not copy
	the structures to the argument buffer if the called function
	fails.

2009-08-21  Ozkan Sezer  <sezeroz@gmail.com>

	* Renamed stdio/_fwstat64i32.c to _wstat64i32.c.  Split
	stdio/_findfirst64i32.c, stdio/_findnext64i32.c, stdio/_fstat64i32.c,
	stdio/_fwstat64i32.c and stdio/_wstat64i32.c so that we have one
	function per file.  stdio/_fstat.c, _stat.c, _stat64i32.c, _wstat.c,
	_wfindfirst64i32.c and _wfindnext64i32.c are the new files.  Adjusted
	Makefile.am and regenerated Makefile.in.

	* Split libsrc/ws2tcpip.c and libsrc/wspiapi.c into the new derictories
	libsrc/ws2tcpip and libsrc/wspiapi respectively so that we have one
	function per file. Adjusted Makefile.am and regenerated Makefile.in.

2009-08-16  Kai Tietz  <kai.tietz@onevision.com>

	* intrincs/writefsbyte.c: New.
        * intrincs/writefsdword.c New.
        * intrincs/readfsbyte.c: New.
        * intrincs/writefsword.c: New.
        * intrincs/readfsword.c: New.
        * intrincs/readfsdword.c: New.
	* Makefile.am (src_libmingwex32): Added 32-bit specific intrinsic
	function libmingwex,a library.
	* Makefile.in: Regenerated.

2009-08-14  Kai Tietz  <kai.tietz@onevision.com>

	* testcases/t_intrinc.cc: New testcase.
